--- a/index.html
+++ b/index.html
@@ -4,144 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Chatbot</title>
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- External Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-            transition: background-color 0.3s ease;
-        }
-
-        #chat-container {
-            width: 400px;
-            height: 600px;
-            background-color: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-            position: relative;
-        }
-
-        #header {
-            background-color: #007bff;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 18px;
-            font-weight: bold;
-            border-radius: 15px 15px 0 0;
-        }
-
-        #theme-switch {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 10px;
-            padding: 5px 10px;
-            cursor: pointer;
-        }
-
-        #messages {
-            flex: 1;
-            padding: 20px;
-            overflow-y: auto;
-            background-color: #fafafa;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .message {
-            max-width: 75%;
-            padding: 10px 15px;
-            border-radius: 20px;
-            word-wrap: break-word;
-            opacity: 0;
-            background-color: lightblue;
-        }
-
-        .user {
-            align-self: flex-end;
-            background-color: #007bff;
-            color: white;
-        }
-
-        .bot {
-            align-self: flex-start;
-            background-color: #e9ecef;
-            color: black;
-        }
-
-        #input-container {
-            display: flex;
-            padding: 10px;
-            background-color: #ffffff;
-            border-top: 1px solid #ccc;
-        }
-
-        #user-input {
-            flex: 1;
-            padding: 10px;
-            font-size: 16px;
-            border: 2px solid #ccc;
-            border-radius: 20px;
-        }
-
-        #send-button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 20px;
-            margin-left: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        #send-button:hover {
-            background-color: #0056b3;
-        }
-
-        #typing-indicator {
-            display: none;
-            margin-left: 10px;
-            align-self: flex-start;
-        }
-
-        .dark-mode {
-            background-color: #1e1e1e;
-        }
-
-        .dark-mode #chat-container {
-            background-color: #333;
-        }
-
-        .dark-mode #header, .dark-mode #theme-switch {
-            background-color: #0056b3;
-        }
-
-        .dark-mode #send-button {
-            background-color: #0056b3;
-        }
-
-        .dark-mode #user-input {
-            background-color: #444;
-            color: white;
-        }
-
-    </style>
 </head>
 <body>
 
@@ -163,96 +30,8 @@
     </div>
 </div>
 
-<script>
-    const userInput = document.getElementById('user-input');
-    const sendButton = document.getElementById('send-button');
-    const messagesContainer = document.getElementById('messages');
-    const typingIndicator = document.getElementById('typing-indicator');
-    const themeSwitch = document.getElementById('theme-switch');
-    let isDarkMode = false;
-
-    // Toggle dark mode
-    themeSwitch.addEventListener('click', () => {
-        document.body.classList.toggle('dark-mode');
-        isDarkMode = !isDarkMode;
-        themeSwitch.textContent = isDarkMode ? 'Light Mode' : 'Dark Mode';
-    });
-
-    sendButton.addEventListener('click', function() {
-        const message = userInput.value.trim();
-        if (message) {
-            addMessage(message, 'user');
-            userInput.value = '';
-            handleUserMessage(message);
-        }
-    });
-
-    userInput.addEventListener('keypress', function(e) {
-        if (e.key === 'Enter') {
-            sendButton.click();
-        }
-    });
-
-    function addMessage(text, sender) {
-        const messageDiv = document.createElement('div');
-        messageDiv.classList.add('message', sender);
-        messageDiv.innerText = text;
-        messagesContainer.appendChild(messageDiv);
-
-        // GSAP animation for messages
-        gsap.fromTo(messageDiv, { opacity: 0, y: 50 }, { opacity: 1, y: 0, duration: 0.8 });
-        messagesContainer.scrollTop = messagesContainer.scrollHeight;
-    }
-
-    function handleUserMessage(message) {
-        if (message.toLowerCase().includes("time")) {
-            fetchTime();
-        } else {
-            sendMessageToBot(message);
-        }
-    }
-
-    function fetchTime() {
-        fetch('http://worldtimeapi.org/api/timezone/Etc/UTC')
-            .then(response => response.json())
-            .then(data => {
-                const currentTime = new Date(data.datetime).toLocaleTimeString();
-                addMessage(`The current time is ${currentTime} IST`, 'bot');
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                addMessage("Sorry, I can't retrieve the time right now.", 'bot');
-            });
-    }
-
-    function sendMessageToBot(message) {
-        fetch('http://localhost:5005/webhooks/rest/webhook', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ message: message })
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.length > 0) {
-                data.forEach(response => addMessage(response.text, 'bot'));
-            }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            addMessage("Sorry, I can't connect to the server right now.", 'bot');
-        });
-    }
-
-    function showTypingIndicator() {
-        typingIndicator.style.display = 'block';
-    }
-
-    function hideTypingIndicator() {
-        typingIndicator.style.display = 'none';
-    }
-</script>
+<!-- Link to external JavaScript file -->
+<script src="script.js"></script>
 
 </body>
 </html>
